--- a/zmsk/zmsk-upms/zmsk-upms-web/src/main/webapp/WEB-INF/web.xml
+++ b/zmsk/zmsk-upms/zmsk-upms-web/src/main/webapp/WEB-INF/web.xml
@@ -73,7 +73,7 @@
 
 	<servlet-mapping>
 		<servlet-name>zmsk-upms</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
