--- a/zmsk/zmsk-common/pom.xml
+++ b/zmsk/zmsk-common/pom.xml
@@ -37,6 +37,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
