--- a/zmsk/pom.xml
+++ b/zmsk/pom.xml
@@ -10,6 +10,7 @@
 	<modules>
 		<module>zmsk-upms</module>
 		<module>zmsk-common</module>
+		<module>zmsk-cache</module>
 	</modules>
 
 	<!-- 集中定义依赖版本号 -->
@@ -38,6 +39,8 @@
 		<jedis.version>2.7.2</jedis.version>
 		<solrj.version>4.10.3</solrj.version>
 		<shiro.version>1.2.3</shiro.version>
+		<jedis.version>2.7.3</jedis.version>
+		<commons-pool2.version>2.4.2</commons-pool2.version>
 	</properties>
 
 	<dependencyManagement>
@@ -234,6 +237,19 @@
 				<groupId>org.apache.shiro</groupId>
 				<artifactId>shiro-spring</artifactId>
 				<version>${shiro.version}</version>
+			</dependency>
+
+			<!-- jedis -->
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>${jedis.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-pool2</artifactId>
+				<version>${commons-pool2.version}</version>
 			</dependency>
 
 		</dependencies>
