--- a/zmsk/zmsk-face/zmsk-face-service/pom.xml
+++ b/zmsk/zmsk-face/zmsk-face-service/pom.xml
@@ -4,14 +4,15 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>com.zmsk</groupId>
-		<artifactId>zmsk-upms</artifactId>
+		<artifactId>zmsk-face</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>zmsk-upms-service</artifactId>
-	<name>zmsk-upms-service</name>
+	<artifactId>zmsk-face-service</artifactId>
+	<name>zmsk-face-service</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -22,7 +23,7 @@
 
 		<dependency>
 			<groupId>com.zmsk</groupId>
-			<artifactId>zmsk-upms-mapper</artifactId>
+			<artifactId>zmsk-face-mapper</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
@@ -32,6 +33,32 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -39,4 +66,5 @@
 		</dependency>
 
 	</dependencies>
+
 </project>
