--- a/zmsk/pom.xml
+++ b/zmsk/pom.xml
@@ -22,7 +22,7 @@
 		<mybatis.spring.version>1.2.2</mybatis.spring.version>
 		<mybatis.paginator.version>1.2.15</mybatis.paginator.version>
 		<mysql.version>5.1.32</mysql.version>
-		<slf4j.version>1.6.4</slf4j.version>
+	    <log4j.version>2.6.2</log4j.version>
 		<jackson.version>2.4.2</jackson.version>
 		<fastjson.version>1.2.28</fastjson.version>
 		<druid.version>1.0.9</druid.version>
@@ -104,9 +104,29 @@
 
 			<!-- 日志处理 -->
 			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>2.6.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>2.6.2</version>
+			</dependency>
+
+			<!-- 桥接：告诉Slf4j使用Log4j2 -->
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>2.6.2</version>
+			</dependency>
+
+			<!-- 桥接：log4j1使用Log4j2 也支持其他实现到log4j的桥接，引入不同的jar包即可 -->
+			<dependency>
 				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4j.version}</version>
+				<artifactId>log4j-over-slf4j</artifactId>
+				<version>1.7.12</version>
 			</dependency>
 
 			<!-- Mybatis -->
