--- a/zmsk/zmsk-face/zmsk-face-web/src/main/webapp/WEB-INF/web.xml
+++ b/zmsk/zmsk-face/zmsk-face-web/src/main/webapp/WEB-INF/web.xml
@@ -58,6 +58,15 @@
 		<url-pattern>/rest/manager/*</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>corsfilter</filter-name>
+		<filter-class>com.zmsk.face.filter.CorsFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>corsfilter</filter-name>
+		<url-pattern>/rest/*</url-pattern>
+	</filter-mapping>
+
 
 	<!-- springmvc的前端控制器 -->
 	<servlet>
