--- a/zmsk/pom.xml
+++ b/zmsk/pom.xml
@@ -12,6 +12,7 @@
 		<module>zmsk-common</module>
 		<module>zmsk-cache</module>
 		<module>zmsk-face</module>
+		<module>zmsk-picture-process</module>
 	</modules>
 
 	<!-- 集中定义依赖版本号 -->
@@ -22,7 +23,7 @@
 		<mybatis.spring.version>1.2.2</mybatis.spring.version>
 		<mybatis.paginator.version>1.2.15</mybatis.paginator.version>
 		<mysql.version>5.1.32</mysql.version>
-	    <log4j.version>2.6.2</log4j.version>
+		<log4j.version>2.6.2</log4j.version>
 		<jackson.version>2.4.2</jackson.version>
 		<fastjson.version>1.2.28</fastjson.version>
 		<druid.version>1.0.9</druid.version>
@@ -271,6 +272,12 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-pool2</artifactId>
 				<version>${commons-pool2.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.aliyun.oss</groupId>
+				<artifactId>aliyun-sdk-oss</artifactId>
+				<version>2.7.0</version>
 			</dependency>
 
 		</dependencies>
