--- a/zmsk/zmsk-face/zmsk-face-service/pom.xml
+++ b/zmsk/zmsk-face/zmsk-face-service/pom.xml
@@ -33,6 +33,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
