--- a/zmsk/pom.xml
+++ b/zmsk/pom.xml
@@ -27,7 +27,8 @@
 		<jackson.version>2.4.2</jackson.version>
 		<fastjson.version>1.2.28</fastjson.version>
 		<druid.version>1.0.9</druid.version>
-		<httpclient.version>4.3.5</httpclient.version>
+		<httpclient.version>4.4.1</httpclient.version>
+		<httpcore.version>4.4</httpcore.version>
 		<jstl.version>1.2</jstl.version>
 		<servlet-api.version>2.5</servlet-api.version>
 		<jsp-api.version>2.0</jsp-api.version>
@@ -93,6 +94,12 @@
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>4.4</version>
 			</dependency>
 
 			<!-- 单元测试 -->
@@ -278,6 +285,12 @@
 				<groupId>com.aliyun.oss</groupId>
 				<artifactId>aliyun-sdk-oss</artifactId>
 				<version>2.7.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.qiniu</groupId>
+				<artifactId>qiniu-java-sdk</artifactId>
+				<version>[7.2.0, 7.2.99]</version>
 			</dependency>
 
 		</dependencies>
