--- a/zmsk/zmsk-face/zmsk-face-service/pom.xml
+++ b/zmsk/zmsk-face/zmsk-face-service/pom.xml
@@ -38,6 +38,21 @@
 			<artifactId>aliyun-sdk-oss</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
